GNOME Bugzilla – Bug 674067
fails to build on (k)freebsd: : __printflike undefined
Last modified: 2014-04-28 21:31:31 UTC
Bug-Debian: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=667984 libgtop fails to build on kfreebsd > steven@kfreebsd-i386:~/libgtop2-2.28.4/sysdeps/freebsd$ gcc -DHAVE_CONFIG_H -I. -I../.. -I../.. -I../.. -I../../sysdeps/freebsd -I../../include -I/usr/include/glib-2.0 -I/usr/li > b/i386-kfreebsd-gnu/glib-2.0/include -D_FORTIFY_SOURCE=2 -Winline -Wall -std=gnu89 -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes -Wnested-externs -Wpointer-arith > -Wcast-align -Wsign-compare -g -O2 -fstack-protector --param=ssp-buffer-size=4 -Wformat -Wformat-security -Werror=format-security -Wall -c procmap.c -fPIC -DPIC -o .libs/procm > ap.o > In file included from ./glibtop_machine.h:26:0, > from ../../glibtop.h:58, > from procmap.c:23: > /usr/include/nlist.h:33:2: warning: #warning "Deprecated header, use <bsd/nlist.h> or libbsd-overlay.pc instead." [-Wcpp] > In file included from procmap.c:43:0: > /usr/include/sys/conf.h: In function ‘make_dev_alias’: > /usr/include/sys/conf.h:281:3: error: expected declaration specifiers before ‘__printflike’ > /usr/include/sys/conf.h:299:16: error: storage class specified for parameter ‘cdevpriv_dtr_t’ > /usr/include/sys/conf.h:301:36: error: expected declaration specifiers or ‘...’ before ‘cdevpriv_dtr_t’ > /usr/include/sys/conf.h:322:16: error: storage class specified for parameter ‘dev_clone_fn’ > /usr/include/sys/conf.h:326:1: error: expected specifier-qualifier-list before ‘dev_clone_fn’ > /usr/include/sys/conf.h:343:12: error: storage class specified for parameter ‘dumping’ Attached is a patch from Steven Chamberlain <steven@pyro.eu.org>
Created attachment 212015 [details] [review] Don't include sys/pipe.h on kFreeBSD
Review of attachment 212015 [details] [review]: Pushed.
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.