Don't include sys/pipe.h on kFreeBSD  Defining _KERNEL to include sys/pipe.h subsequently breaks sys/conf.h;  since sys/pipe.h is not meant to be used in userland, and libgtop2 builds  anyway on kFreeBSD without it, don't include it. https://bugzilla.gnome.org/show_bug.cgi?id=674067